--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
             margin-top: 25px;
         }
     </style>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-4599982617961569" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Política de Privacidade - EFS Aplicativos</h1>
