Adição por meta tag

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="google-adsense-account" content="ca-pub-4599982617961569">
     <title>Política de Privacidade - EFS Aplicativos</title>
     <style>
         body {
@@ -70,7 +71,6 @@
             margin-top: 25px;
         }
     </style>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=pub-4599982617961569" crossorigin="anonymous"></script>
 </head>
 <body>
     <h1>Política de Privacidade - EFS Aplicativos</h1>
